--- a/src/css/index.less
+++ b/src/css/index.less
@@ -1,6 +1,14 @@
-html,body {
+html,
+body {
   margin: 0;
   padding: 0;
+}
+
+/*文本超出省略号*/
+.text-overflow {
+  text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 * {
